# serenity

./: CMakeLists.txt
Base/etc/: shellrc
Meta/: generate-contacts.py
Userland/Applications/: CMakeLists.txt
Userland/Applications/AddressBook/: AddressBook.cpp  AddressBook.h  AddressBookWidget.cpp  AddressBookWidget.h  AddressBookWindow.gml  CMakeLists.txt  Schema.json  main.cpp
Userland/Applications/PixelPaint/: ImageEditor.cpp  main.cpp
Userland/Services/WindowServer/: Window.cpp
